--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Beneficio</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -154,7 +154,7 @@
   <section class="cta">
     <div class="cta-content">
       <div class="container">
-        <h2>Мысли глобально.<br>Присоединяйся!</h2>
+        <h4>Присоединяйся!</h4>
         <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">к сообществу</a>
       </div>
     </div>
