--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>New Age - Start Bootstrap Theme</title>
+  <title>Beneficio</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,8 +96,8 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
-        <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <h2>Так что же это?</h2>
+        <p class="text-muted">Здесь мы привели Вам несколько векторов нацеленности нашего приложения!</p>
         <hr>
       </div>
       <div class="row">
@@ -163,7 +163,7 @@
 
   <section class="contact bg-primary" id="contact">
     <div class="container">
-      <h2>Benefico
+      <h2>Beneficio
         <i class="fas fa-heart"></i>
         новых друзей!</h2>
       <ul class="list-inline list-social">
