--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <h2 class="section-heading">Ежедневно приумножай свой капитал!</h2>
-          <p>Наше приложение доступно на любоплатформе! Скачать сейчас, чтобы начать!</p>
+          <p>Наше приложение доступно на любой платформе! Скачать сейчас, чтобы начать!</p>
           <div class="badges">
             <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
             <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -121,7 +121,7 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <h3>Последние технлогоии</h3>
-                  <p class="text-muted">При постоении приложения были использованы новейшие технологии для удобства использования</p>
+                  <p class="text-muted">При постоении приложения использованы новейшие технологии для удобства использования</p>
                 </div>
               </div>
               <div class="col-lg-6">
@@ -135,7 +135,7 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <h3>Абсолютно без вложений</h3>
-                  <p class="text-muted">Первое приложение которое дает вам возможность заработка без каких либо взносов с личного капитала</p>
+                  <p class="text-muted">Первое приложение, которое позволяет зарабатывать без каких либо вложений</p>
                 </div>
               </div>
               <div class="col-lg-6">
