fix: layout edits

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link js-scroll-trigger" href="#download">Скачать</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Пару слов нас</a>
+            <a class="nav-link js-scroll-trigger" href="#features">О продукте</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Контакты</a>
@@ -83,7 +83,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <h2 class="section-heading">Ежедневно приумножай свой капитал!</h2>
-          <p>Наше приложение доступно на любой платформе! Скачать сейчас, чтобы начать!</p>
+          <p>Наше приложение доступно на всех актуальных платформах! Скачай сейчас, чтобы начать!</p>
           <div class="badges">
             <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
             <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -96,7 +96,7 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
-        <h2>Так что же это?</h2>
+        <h2>Как это работает?</h2>
         <p class="text-muted">Здесь мы привели Вам несколько векторов нацеленности нашего приложения!</p>
         <hr>
       </div>
@@ -120,7 +120,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <h3>Последние технлогоии</h3>
+                  <h3>Последние технологии</h3>
                   <p class="text-muted">При постоении приложения использованы новейшие технологии для удобства использования</p>
                 </div>
               </div>
